Fix overflow

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,10 +8,11 @@ body{
   margin:0px;
   font-family: 'Source Sans Pro', sans-serif;
   background-color:var(--main-color);
+  overflow-x: hidden;
 }
 
-.container{
-  overflow-x: hidden;
+#overflow{
+  overflow-x: hidden !important;
 }
 
 #first_section {
